Add cmocean colormaps, bugfixes (#886)
Co-authored-by: Matt Fisher <3608264+mfisher87@users.noreply.github.com>

--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -16,6 +16,7 @@
     "src/schema/*.json",
     "src/_interface/*.json",
     "src/*.json",
-    "src/types/*"
+    "src/types/*",
+    "src/dialogs/symbology/components/color_ramp/cmocean.json"
   ]
 }
