Move all ui-test dependencies into ui-tests/content subdir
Use symlinks to any files that also exist in `examples/` and `cp
--dereference` when copying into the JupyterLite deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -285,8 +285,7 @@ jobs:
         working-directory: lite
         run: |
           set -eux
-          cp -R ../examples ./content
-          cp ../ui-tests/data/* ./content/.
+          cp --recursive --dereference ../ui-tests/content ./content
           find ./content -type d -name ".ipynb_checkpoints" -exec rm -rf {} +
           jupyter lite build --contents content --output-dir dist
 
