Updated and organized ipynb examples directory for clarity (#872)
* Add new JGIS documents and examples for spatial data visualization

- Created new JGIS files: shapefile.jGIS, test.jGIS, and world.jGIS with various layers and sources.
- Added Jupyter notebooks for creating a new JGIS document, exploring data in a map, and opening existing JGIS projects.
- Implemented vector styling examples and added raster and GeoJSON layers to demonstrate usage of the JupyterGIS API.
- Enhanced documentation with markdown cells to provide context and instructions for users.

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Add introductory content and explanations for creating a new JGIS document

* rename open map doc

* push branch to Main

* Relocate example jGIS projects, fix data references

* Update JupyterLite build for new content locations

* Move QGZ project files out of data directory

* Remove spaces from filename

* Copy nyc data folder for Lite build

* Move a missed project file out of `data/` dir

* Copy examples excluding unwanted content instead of enumerating all wanted content

* Add all example content in RTD build

* Pass in only the examples directory as jupyterlite_contents

The globstar doesn't work how I expected!

<https://github.com/jupyterlite/jupyterlite-sphinx/issues/307>

* Re-add jgis.ipynb as test data

* Un-nest the examples directory in the content directory

The contents of `examples/` should be directly visible at the root of
the filesystem in the Lite deployment, not inside an `examples/`
directory.

* Move all ui-test dependencies into ui-tests/content subdir

Use symlinks to any files that also exist in `examples/` and `cp
--dereference` when copying into the JupyterLite deployment

* Add more test dependency symlinks

* Restore previous viewport position to updated examples

* Update Playwright Snapshots

* Fix broken test.jGIS project file

* Update Playwright Snapshots

--------

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -285,7 +285,8 @@ jobs:
         working-directory: lite
         run: |
           set -eux
-          mkdir -p content && cp ../examples/*.jGIS ../examples/*.qgz ../examples/*.geojson ../examples/*.tif ../examples/*.zip ../examples/*.ipynb ../examples/*.gif ./content
+          cp --recursive --dereference ../ui-tests/content ./content
+          find ./content -type d -name ".ipynb_checkpoints" -exec rm -rf {} +
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload Lite artifacts
