--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -23,8 +23,8 @@ dependencies = [
   "jupytergis_lab==0.9.2",
   "jupytergis_qgis==0.9.2",
   "jupyter-collaboration>=4",
-  "jupyter-docprovider>=1,<2",
-  "jupyter-server-ydoc>=1,<2",
+  "jupyter-docprovider>=2",
+  "jupyter-server-ydoc>=2",
   "jupyter-collaboration-ui>=2",
   "jupyterlab>=4.3,<5",
 ]
