--- a/lite/environment.yml
+++ b/lite/environment.yml
@@ -14,7 +14,7 @@ dependencies:
   - sidecar
   - pip:
       - yjs-widgets>=0.4,<0.5
-      - my-jupyter-shared-drive<0.2.0
+      - my-jupyter-shared-drive>=0.2.0
       - ../jupytergis_lab-0.0.1-py3-none-any.whl
       - ../jupytergis_core-0.0.1-py3-none-any.whl
       - ../jupytergis_lite-0.0.1-py3-none-any.whl
