--- a/python/jupytergis_lite/pyproject.toml
+++ b/python/jupytergis_lite/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 dependencies = [
   "jupytergis_core==0.9.2",
   "jupytergis_lab==0.9.2",
-  "my-jupyter-shared-drive<0.2.0",
+  "my-jupyter-shared-drive>=0.2.0",
 ]
 dynamic = ["version"]
 license = {file = "LICENSE"}
