--- a/.github/workflows/triage-prs-to-board.yml
+++ b/.github/workflows/triage-prs-to-board.yml
@@ -3,7 +3,7 @@ name: 'PR Triage Bot'
 on:
   schedule:
     - cron: '0 * * * *'
-  workflow_dispatch: true
+  workflow_dispatch:
 
 jobs:
   pr-triage:
