--- a/.github/workflows/triage-prs-to-board.yml
+++ b/.github/workflows/triage-prs-to-board.yml
@@ -7,12 +7,14 @@ on:
 
 jobs:
   pr-triage:
-    uses: 'yuvipanda/pr-triage-board-bot/.github/workflows/reusable-pr-triage.yml@main'
-    with:
-      organization: 'geojupyter'
-      project-number: '3'
-      gh-app-id: '1943749'
-      gh-installation-id: '85628873'
-      repositories: 'jupytergis'
-    secrets:
-      gh-app-private-key: '${{ secrets.GH_APP_PRIVATE_KEY }}'
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: 'Run PR Triage Bot'
+        uses: 'yuvipanda/pr-triage-board-bot@main'
+        with:
+          organization: 'geojupyter'
+          project-number: '3'
+          gh-app-id: '1943749'
+          gh-installation-id: '85628873'
+          repositories: 'jupytergis'
+          gh-app-private-key: '${{ secrets.GH_APP_PRIVATE_KEY }}'
