--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "bump:js:version": "lerna version --no-push --force-publish --no-git-tag-version --yes",
     "clean": "lerna run clean",
     "clean:all": "lerna run clean:all",
-    "eslint": "eslint . --ext .ts,.tsx --cache --fix",
+    "eslint": "eslint . --cache --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
     "prettier": "prettier --write \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md,.yml}\"",
     "prettier:check": "prettier --check \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md,.yml}\"",
@@ -51,6 +51,7 @@
     "watch": "lerna watch -- lerna run build --scope=\\$LERNA_PACKAGE_NAME --include-dependents",
     "build:lab": "lerna run"
   },
+  "type": "module",
   "resolutions": {
     "@jupyterlab/apputils": "^4.0.0",
     "@lumino/coreutils": "^2.0.0",
@@ -59,18 +60,18 @@
   },
   "devDependencies": {
     "@types/webpack-env": "^1.18.5",
-    "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@typescript-eslint/parser": "5.55.0",
     "copy-webpack-plugin": "^10.0.0",
-    "eslint": "^8.36.0",
+    "eslint": "^9.35.0",
+    "@eslint/js": "^9.35.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "lerna": "^8.1.9",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^5",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0",
     "webpack": "^5.76.3"
   }
 }
