--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lerna": "^8.1.9",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "react-draggable": "^4.5.0",
     "rimraf": "^3.0.2",
     "typescript": "^5",
     "webpack": "^5.76.3"
