Start implementing story viewer

--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -93,6 +93,7 @@
     "proj4-list": "1.0.4",
     "react": "^18.0.1",
     "react-day-picker": "^9.7.0",
+    "react-markdown": "^10.1.0",
     "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
     "three": "^0.135.0",
