Add story presentation as a setting

--- a/python/jupytergis_core/schema/jupytergis-settings.json
+++ b/python/jupytergis_core/schema/jupytergis-settings.json
@@ -43,6 +43,11 @@
       "type": "boolean",
       "title": "Disable Right Panel",
       "default": false
+    },
+    "storyMapPresentation": {
+      "type": "boolean",
+      "title": "Enable Story Map Presentations",
+      "default": false
     }
   }
 }
