--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -17,6 +17,7 @@
     "src/_interface/*.json",
     "src/*.json",
     "src/types/*",
-    "src/dialogs/symbology/components/color_ramp/cmocean.json"
+    "src/dialogs/symbology/components/color_ramp/cmocean.json",
+    "src/stacBrowser/components/catalogs.json"
   ]
 }
