Apply suggestions from code review
Co-authored-by: Matt Fisher <3608264+mfisher87@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -239,9 +239,9 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
         with:
-          ignore_links: |
+          ignore_links: >-
             lite/
-            https://www.npmjs.com.*
+            https://www\.npmjs\.com.*
             ^/.*
             https://blog\.jupyter\.org/.*
 
