--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -239,7 +239,11 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
         with:
-          ignore_links: 'lite/ https://www.npmjs.com.* ^/.*'
+          ignore_links: >-
+            lite/
+            https://www\.npmjs\.com.*
+            ^/.*
+            https://blog\.jupyter\.org/.*
 
   build-lite:
     name: Build JupyterLite artifacts
