--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,5 +1,6 @@
 # minimum needed to build jupytergis.
 datamodel-code-generator>=0.23.0
+build
 hatchling>=1.5.0,<2
 jupyter-collaboration>=3,<4
 jupyter-collaboration-ui>=1,<2
