--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -21,11 +21,11 @@ dependencies = [
   "jupytergis_core==0.10.1",
   "jupytergis_lab==0.10.1",
   "jupytergis_qgis==0.10.1",
-  "jupyter-collaboration>=3,<4",
-  "jupyter-docprovider>=1,<2",
-  "jupyter-server-ydoc>=1,<2",
-  "jupyter-collaboration-ui>=1,<2",
-  "jupyterlab>=4.3,<4.5.0",
+  "jupyter-collaboration>=4,<5",
+  "jupyter-docprovider>=2,<3",
+  "jupyter-server-ydoc>=2,<3",
+  "jupyter-collaboration-ui>=2,<3",
+  "jupyterlab>=4.3",
 ]
 description = "Collaborative GIS extension for JupyterLab"
 dynamic = ["version"]
