--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -16,6 +16,8 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
   "jupytergis_core==0.10.1",
@@ -25,7 +27,7 @@ dependencies = [
   "jupyter-docprovider>=2,<3",
   "jupyter-server-ydoc>=2,<3",
   "jupyter-collaboration-ui>=2,<3",
-  "jupyterlab>=4.3",
+  "jupyterlab>=4.5.1",
 ]
 description = "Collaborative GIS extension for JupyterLab"
 dynamic = ["version"]
