--- a/python/jupytergis_core/pyproject.toml
+++ b/python/jupytergis_core/pyproject.toml
@@ -74,7 +74,7 @@ version_cmd = "hatch version"
 
 [tool.jupyter-releaser.hooks]
 before-build-npm = [
-  "python -m pip install 'jupyterlab>=4.0.0,<4.5.0'",
+  "python -m pip install 'jupyterlab>=4.5.1'",
   "jlpm",
   "jlpm build:prod",
 ]
