--- a/python/jupytergis_lab/pyproject.toml
+++ b/python/jupytergis_lab/pyproject.toml
@@ -2,7 +2,7 @@
 build-backend = "hatchling.build"
 requires = [
   "hatchling>=1.5.0",
-  "jupyterlab>=4.0.0,<4.5.0",
+  "jupyterlab>=4.5.1",
   "hatch-nodejs-version>=0.3.2",
 ]
 
@@ -20,6 +20,8 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
   "requests",
@@ -78,7 +80,7 @@ version_cmd = "hatch version"
 
 [tool.jupyter-releaser.hooks]
 before-build-npm = [
-  "python -m pip install 'jupyterlab>=4.0.0,<4.5.0'",
+  "python -m pip install 'jupyterlab>=4.5.1'",
   "jlpm",
   "jlpm build:prod",
 ]
