It's a bummer we have to do this

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,7 +158,7 @@ jobs:
           environment-name: gis
           create-args: >-
             python=3.12
-            jupyterlab=4
+            jupyterlab
             ipywidgets
             qgis
 
