--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -2,11 +2,11 @@ build
 # minimum needed to build jupytergis.
 datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
-jupyter-collaboration>=3,<4
-jupyter-collaboration-ui>=1,<2
-jupyter-docprovider>=1,<2
-jupyter-server-ydoc>=1,<2
-jupyterlab>=4.3,<4.5.0
+jupyter-collaboration>=4,<5
+jupyter-collaboration-ui>=2,<3
+jupyter-docprovider>=2,<3
+jupyter-server-ydoc>=2,<3
+jupyterlab>=4.5.1
 mercantile>=1.2
 pillow>=10
 pydantic>=2.4.2,<3
