--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,9 @@ repos:
     hooks:
       - id: rstcheck
         args: ['--ignore-directives=jupyterlite,tabs,toctree,autoclass,cssclass,include', '--report-level=warning']
+
+  # Validate citation metadata
+  - repo: https://github.com/citation-file-format/cffconvert
+    rev: "b6045d78aac9e02b039703b030588d54d53262ac"
+    hooks:
+      - id: validate-cff
