add setting for disable/enable zoom buttons

--- a/python/jupytergis_core/schema/jupytergis-settings.json
+++ b/python/jupytergis_core/schema/jupytergis-settings.json
@@ -48,6 +48,12 @@
       "type": "boolean",
       "title": "Disable Story Maps",
       "default": false
+    },
+    "zoomButtonsDisabled": {
+      "type": "boolean",
+      "title": "Disable Zoom Buttons",
+      "description": "Disable + / − zoom buttons on the map.",
+      "default": true
     }
   }
 }
