--- a/python/jupytergis_core/schema/jupytergis-settings.json
+++ b/python/jupytergis_core/schema/jupytergis-settings.json
@@ -61,7 +61,7 @@
     "identifyDisabled": {
       "type": "boolean",
       "title": "Disable Identify Features",
-      "description": "Disable Identify Features tab from the Right Panel.",
+      "description": "Disable Identify Features tab from the Right Panel, also Disble the Identify command toolbar button.",
       "default": false
     },
     "zoomButtonsEnabled": {
