--- a/tsconfigbase.json
+++ b/tsconfigbase.json
@@ -10,16 +10,23 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "preserveWatchOutput": true,
     "resolveJsonModule": true,
     "strict": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "target": "es2017",
-    "types": ["node", "webpack-env"],
+    "types": [
+      "node",
+      "webpack-env"
+    ],
     "skipLibCheck": true,
-    "lib": ["ES2019", "WebWorker", "DOM"]
+    "lib": [
+      "ES2019",
+      "WebWorker",
+      "DOM"
+    ]
   },
   "esModuleInterop": true,
   "resolveJsonModule": true
