--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -3,15 +3,15 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.12
+  - python
 
   # Build docs & JupyterLite
   - jupyterlite-core
   - jupyterlite-xeus
   - jupyterlite-sphinx
   - jupytext =1.19.0
-  - sphinx ~=8.2.3
-  - sphinx-tabs
+  - sphinx
+  - sphinx-inline-tabs
   - pydata-sphinx-theme
   - sphinx-autodoc-typehints
   - sphinx-exercise
